classwork lesson 01_12 TaskA